<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:stretchColumns="1">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="#eaeaea">

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/meyarlar"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_weight="1"
                android:text="Şərtlər"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:id="@+id/s"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="@android:color/darker_gray"/>

        <TableRow>
            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Kreditin məbləği"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Maks. 50000 AZN"
                android:textColor="@android:color/black"
                />
        </TableRow>

        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TableRow>
            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Müddəti                                                                                                                                                                         "
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="3 - 25 il"
                android:textColor="@android:color/black"
                />
        </TableRow>
        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TableRow>
            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Faiz dərəcəsi"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Illik 8%"
                android:textColor="@android:color/black"
                />
        </TableRow>

        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TableRow>
            <TextView
                android:text="Faiz dərəcəsi (Sosial)"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>

            <TextView
                android:text="Illik 4%"
                android:layout_weight="1"
                android:textColor="@android:color/black"/>
            />

        </TableRow>
        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TableRow>
         <TextView
          android:text="Faktiki illik faiz dərəcəsi"
          android:textColor="@android:color/black"
          android:layout_weight="1"
             />

            <TextView
                android:text="8,01% (Məbləğ 50000 AZN, illik faiz dərəcəsi 8%, müddət 300 ay, komissiya 0.1% + 5 AZN olduqda)"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                />


        </TableRow>
        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TableRow>
            <TextView
                android:text="Faktiki illik faiz dərəcəsi(Sosial)"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                />

            <TextView
                android:text="4,01% (Məbləğ 50000 AZN, illik faiz dərəcəsi 4%, müddət 300 ay, komissiya 0.1% + 5 AZN olduqda)"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                />
        </TableRow>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TableRow>
        <TextView
          android:textColor="@android:color/black"
            android:text="İlkin ödəniş	"
            android:layout_weight="1"

            />
            <TextView
                android:textColor="@android:color/black"
                android:text="Min. 20%"
                android:layout_weight="1"
                />
        </TableRow>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TableRow>
       <TextView
         android:layout_weight="1"
           android:textColor="@android:color/black"
           android:text="Ödəniş forması	"
           />

            <TextView
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="Annuitet"
                />

        </TableRow>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TableRow>
            <TextView
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="Təminat"
                />

            <TextView
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="Alınan ev"
                />

        </TableRow>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


        <TableRow>

            <TextView
                android:layout_weight="1"
                android:text="Tələb olunan sənədlər"
                android:textColor="@android:color/black"
                />
            <TextView

                android:layout_weight="1"
                android:text="@string/san"
                android:textColor="@android:color/black"
                />
        </TableRow>
        <TableRow>
            <TextView
               android:text="           "
                android:layout_weight="1"
                />
        <TextView
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/perviyblokHead"
            android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text="           "
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:text="@string/perviblok"
                android:textColor="@android:color/black"/>

        </TableRow>


        <TableRow>
            <TextView
                android:text="           "
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/vtoroiblokHead"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:text="@string/vtoroiblok"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="           "
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/tretiyblockHead"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:text="@string/tretiyblock"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="           "
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/chetblockHead"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:text="@string/chetvblock"
                android:textColor="@android:color/black"/>
        </TableRow> <TableRow>
        <TextView
            android:text="           "
            android:layout_weight="1"
            />
        <TextView
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/chetblockHead"
            android:textColor="@android:color/black"/>

    </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:text="@string/chetvblock"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="           "
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/patiyblokHead"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text=""
                android:layout_weight="1"
                />
            <TextView
                android:layout_weight="1"
                android:text="@string/patiyblok"
                android:textColor="@android:color/black"/>
        </TableRow>
        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <View

            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <View
            android:layout_width="1dp"
            android:layout_height="20dip"
            android:layout_weight="1">
        </View>

    </TableLayout>
</ScrollView>